# mini-pos-cli

./: .gitignore  CMakeLists.txt  LICENSE
include/: App.h
include/domain/: Inventory.h  Product.h  SaleLine.h  SaleTransaction.h  TransactionManager.h
include/errors/: Error.h
include/helpers/: GlobalHelpers.h  JsonStore.h  json_serializers.h
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp
src/domain/: TransactionManager.cpp  inventory.cpp
src/helpers/: GlobalHelpers.cpp  JsonStore.cpp
